[package]
name = "simplereading"
version = "0.9.30"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
hyper-tls = "0.6"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "macros",
    "process",
] }
url = "2"
flate2 = "1"
lazy_static = "1.4"
unicase = "2.7"
html5ever = "0.26"
regex = "1"
kuchiki = "0.8"
log = "0.4"
#readability = { path = "../readability", default-features = false }
readability = { git = "https://github.com/lucifer9/readability", default-features = false }
encoding = "0.2"
anyhow = "1.0"
uuid = { version = "1", features = ["v4", "fast-rng"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures-util = "0.3"
#unicode-segmentation = "1.9"
time = { version = "0.3", features = ["formatting"] }
brotli = "3.4"
env_logger = "0.10"
