[package]
name = "simplereading"
version = "0.11.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "net",
  "macros",
  "process",
] }
url = "2"
flate2 = "1"

regex = "1"
log = "0.4"
#readability = { path = "../readability", default-features = false }
readability = { git = "https://github.com/lucifer9/readability", default-features = false }
encoding_rs = "0.8"
anyhow = "1.0"
uuid = { version = "1", features = ["v4", "fast-rng"] }
tokio-tungstenite = { version = "*", features = [
  "rustls-tls-webpki-roots",
  "connect",
] }
futures-util = "0.3"
time = { version = "0.3", features = ["formatting"] }
brotli = "8"
zstd = "0.13"
env_logger = "0.11"
tokio-socks = "0.5"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "1"
hyper-rustls = { version = "0.27", features = [
  "http1",
  "http2",
  "webpki-roots",
] }
unicase = "2.7"
html5ever = "0.36"
